--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.8.2",
     "framer-motion": "^12.4.11",
+    "i18next": "^24.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0"
   },
